# marketplusai

./: .gitignore  DEPLOY_INSTRUCTIONS.md  README.md  api.py  app.py  data_fetcher.py  email_service.py  finance_app.db  index.html  local_app.py  market_predictor.db  prediction_models.py  predictor.py  pyproject.toml  requirements.txt  run.py  setup.py  setup.sh  similarity_search.py  simple_plot.py  streamlit-requirements.txt  streamlit_fix.py  utils.py  visualizer.py
