[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "streamlit>=1.45.1",
    "yfinance>=0.2.61",
]
